WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276131
AX: The Node pointer member of the TextMarkerData structure is no longer needed.
https://bugs.webkit.org/show_bug.cgi?id=276131
Summary
AX: The Node pointer member of the TextMarkerData structure is no longer needed.
Andres Gonzalez
Reported
2024-07-02 11:42:38 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-02 11:42:48 PDT
<
rdar://problem/130985322
>
Andres Gonzalez
Comment 2
2024-07-02 15:09:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30414
EWS
Comment 3
2024-07-05 09:18:14 PDT
Committed
280689@main
(3341c5cc2988): <
https://commits.webkit.org/280689@main
> Reviewed commits have been landed. Closing PR #30414 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug