AX: The Node pointer member of the TextMarkerData structure is no longer needed. https://bugs.webkit.org/show_bug.cgi?id=276131 <rdar://problem/130985322>

Reviewed by Tyler Wilcock.

This change removes the Node pointer from the TextMarkerData structure since it is no longer needed. The treeID and objectID uniquely identify the AX object, and the Node can be obtained from the ax object when needed. This removes a great deal of complexity from the code since there is no need to keep track of Nodes referenced from a TextMarker any longer. It also eliminates the need for the RawTextMarkerData in addition to the TextMarkerData structure.

* LayoutTests/accessibility/mac/textmarker-routines.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::remove):
(WebCore::AXObjectCache::visiblePositionForTextMarkerData):
(WebCore::AXObjectCache::characterOffsetForTextMarkerData):
(WebCore::AXObjectCache::textMarkerDataForCharacterOffset):
(WebCore::AXObjectCache::objectForTextMarkerData):
(WebCore::AXObjectCache::textMarkerDataForVisiblePosition):
(WebCore::AXObjectCache::prepareForDocumentDestruction):
(WebCore::AXObjectCache::accessibilityObjectForTextMarkerData): Deleted.
(WebCore::AXObjectCache::textMarkerDataForFirstPositionInTextControl): Deleted.
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::nodeForID const):
* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::TextMarkerData::TextMarkerData):
(WebCore::AXTextMarker::operator VisiblePosition const):
(WebCore::AXTextMarker::operator CharacterOffset const):
(WebCore::AXTextMarker::debugDescription const):
(WebCore::AXTextMarkerRange::AXTextMarkerRange):
(WebCore::AXTextMarkerRange::intersectionWith const):
(WebCore::AXTextMarker::setNodeIfNeeded const): Deleted.
(WebCore::RawTextMarkerData::toTextMarkerData const): Deleted.
* Source/WebCore/accessibility/AXTextMarker.h:
(WebCore::TextMarkerData::TextMarkerData):
(WebCore::TextMarkerData::axTreeID const):
(WebCore::TextMarkerData::axObjectID const):
(WebCore::AXTextMarker::AXTextMarker):
(WebCore::AXTextMarker::treeID const):
(WebCore::AXTextMarker::objectID const):
(WebCore::RawTextMarkerData::RawTextMarkerData): Deleted.
(): Deleted.
(WebCore::TextMarkerData::toRawTextMarkerData const): Deleted.
(WebCore::AXTextMarker::node const): Deleted.
* Source/WebCore/accessibility/cocoa/AXTextMarkerCocoa.mm:
(WebCore::AXTextMarker::AXTextMarker):
(WebCore::AXTextMarker::platformData const):
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityTextMarker initWithData:cache:]):
(-[WebAccessibilityTextMarker dataRepresentation]):
(-[WebAccessibilityTextMarker accessibilityObject]):
(-[WebAccessibilityTextMarker description]):
* Source/WebCore/accessibility/isolatedtree/mac/AXIsolatedObjectMac.mm:
(WebCore::AXIsolatedObject::attributedStringForTextMarkerRange const):
* Source/WebCore/accessibility/mac/AXObjectCacheMac.mm:
(WebCore::addFirstTextMarker):
(WebCore::getBytesFromAXTextMarker):
(WebCore::accessibilityObjectForTextMarker):
(WebCore::textMarkerForVisiblePosition):
(WebCore::textMarkerForCharacterOffset):
(WebCore::startOrEndTextMarkerForRange):

Canonical link: https://commits.webkit.org/280689@main